<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_30"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            style="@style/commonTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/semi_rounded_primary_color"
            android:text="@string/logout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/semi_rectangle_grey_color"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout_content"
                android:textSize="@dimen/sp_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_no"
                    style="@style/commonButton"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_weight="1"
                    android:text="@string/btn_no" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_yes"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_dark_grey_with_effect"
                    android:text="@string/btn_yes"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/lato_regular"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>