<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            style="@style/commonTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/semi_rounded_primary_color"
            android:text="@string/change_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/semi_rectangle_grey_color"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_current_password"
                style="@style/commonHintColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_current_password"
                    style="@style/commonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/img_lock"
                    android:hint="@string/current_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_password"
                style="@style/commonHintColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_new_password"
                    style="@style/commonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/img_lock"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_password"
                style="@style/commonHintColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_confirm_password"
                    style="@style/commonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/img_lock"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    style="@style/commonButton"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_weight="1"
                    android:text="@string/btn_send" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner_dark_grey_with_effect"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/lato_regular"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>