<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackgroundColor"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_30"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/commonTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@drawable/rounded_corner_white_grey_stroke"
                android:padding="@dimen/dp_15"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/lato_regular"/>

            <android.support.v7.widget.AppCompatTextView
                style="@style/commonTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/quote_title" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_quote_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@drawable/rounded_corner_white_grey_stroke"
                android:inputType="textCapSentences"
                android:hint="@string/quote_title"
                android:padding="@dimen/dp_15"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/lato_regular"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_next"
                style="@style/commonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/btn_next" />
        </LinearLayout>
    </LinearLayout>
</layout>