<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.tegs.utils.Utils" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackgroundColor"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:clickable="true"
            android:padding="@dimen/dp_5"
            android:src="@drawable/img_settings" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            android:src="@drawable/img_home_logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/lato_bold"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkBrown"
            android:textSize="@dimen/sp_22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/rounded_corner_gray"
            android:orientation="vertical">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_easy_automation_quotes"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_half_gate"
                        android:text="@string/easy_automation" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/colorDivider" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_spare_parts_quotes"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_spare_parts"
                        android:text="@string/spare_parts" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/colorDivider" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_data_sheets_manuals"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_manuals"
                        android:text="@string/data_sheets" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/colorDivider" />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_brochures"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_brochures"
                        android:text="@string/brochures" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/colorDivider" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_video_photo_gallery"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_video_photos"
                        android:text="@string/video_photo_gallery" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="@color/colorDivider" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_instant_msg"
                        style="@style/commonHomeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/img_home_msg"
                        android:text="@string/instant_msg" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>
